Removed cookie endpoints
