# cmd/go-swagger/restapi/operations/cmd_injection/post_cookies_command_context_responses.go
@@ -1,92 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package cmd_injection
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// PostCookiesCommandContextOKCode is the HTTP code returned for type PostCookiesCommandContextOK
-const PostCookiesCommandContextOKCode int = 200
-
-/*PostCookiesCommandContextOK returns the rendered response as a string
-
-swagger:response postCookiesCommandContextOK
-*/
-type PostCookiesCommandContextOK struct {
-
-	/*The response when succesful query happens
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewPostCookiesCommandContextOK creates PostCookiesCommandContextOK with default headers values
-func NewPostCookiesCommandContextOK() *PostCookiesCommandContextOK {
-
-	return &PostCookiesCommandContextOK{}
-}
-
-// WithPayload adds the payload to the post cookies command context o k response
-func (o *PostCookiesCommandContextOK) WithPayload(payload string) *PostCookiesCommandContextOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the post cookies command context o k response
-func (o *PostCookiesCommandContextOK) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *PostCookiesCommandContextOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-/*PostCookiesCommandContextDefault Error occured
-
-swagger:response postCookiesCommandContextDefault
-*/
-type PostCookiesCommandContextDefault struct {
-	_statusCode int
-}
-
-// NewPostCookiesCommandContextDefault creates PostCookiesCommandContextDefault with default headers values
-func NewPostCookiesCommandContextDefault(code int) *PostCookiesCommandContextDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &PostCookiesCommandContextDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the post cookies command context default response
-func (o *PostCookiesCommandContextDefault) WithStatusCode(code int) *PostCookiesCommandContextDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the post cookies command context default response
-func (o *PostCookiesCommandContextDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WriteResponse to the client
-func (o *PostCookiesCommandContextDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(o._statusCode)
-}
